moved white space fix to stylesheet

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -16,6 +16,11 @@ body, html {
     padding: 0px;    
 }
 
+html {
+    overflow-y: auto;
+    overflow-x: auto;
+}
+
 * {
     box-sizing: border-box;
 }
